# school_visits_utilities

./: CMakeLists.txt  package.xml
bash_scripts/: clear_costmaps  explore_on_turtlebot  gmapping_on_turtlebot  kill_amcl_map_server  treasure_hunting
config/: behind_the_scenes.yaml
launch/: behind_the_scenes.launch
scripts/: behind_the_scenes.py
