<?xml version="1.0"?>
<package format="2">
  <name>school_visits_utilities</name>
  <version>0.0.1</version>
  <description>The school_visits_utilities package</description>

  <maintainer email="stavrinosgeo@gmail.com">George Stavrinos</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
